--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Assistant:wght@600&family=Roboto:wght@400;700&display=swap");
 
 html,
 body,
@@ -105,6 +106,11 @@ section {
   display: block;
 }
 body {
+  font-family: "Assistant";
+  color: white;
+  margin-left: 50px;
+
+  background-color: black;
   line-height: 1;
 }
 ol,
